MET-3404 Improve null check and equality for aggregation values